[project]
name = "pemv1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hallmd",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
    "xarray>=2026.2.0",
]

[tool.uv.sources]
hallmd = { git = "https://github.com/JANUS-institute/HallThrusterPEM" }
